--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "serve-storybook": "npx http-server storybook-static -p 3004",
     "build-storybook": "storybook build",
     "predeploy": "npm run build-storybook",
-    "deploy-storybook": "gh-pages -d storybook-static"
+    "deploy-storybook": "gh-pages -d storybook-static",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -56,6 +57,9 @@
     "@storybook/react": "^7.0.6",
     "@storybook/react-vite": "^7.0.6",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.7.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -74,6 +78,8 @@
     "eslint-plugin-storybook": "^0.6.11",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
@@ -83,6 +89,7 @@
     "sass-loader": "^13.2.2",
     "storybook": "^7.0.6",
     "storybook-builder-vite": "^0.1.23",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-plugin-dts": "^1.4.1",
