--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "preview": "vite preview",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint --fix 'src/**/*.{jsx,ts,tsx}'",
-    "format": "prettier --write src//**/*.{ts,tsx,css} --config ./.prettierrc",
+    "format": "prettier --write src//**/*.{ts,tsx} --config ./.prettierrc",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
     "serve-storybook": "npx http-server storybook-static -p 3004",
@@ -43,8 +43,7 @@
     ".": {
       "import": "./dist/react-base-components.es.js",
       "require": "./dist/react-base-components.umd.js"
-    },
-    "./dist/style.css": "./dist/style.css"
+    }
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.6",
